CSCFAIRMETA-578: [REF] Moves miscellaneous apis from rest to rpc. Updates corresponding swagger and tests.
